// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "avatarUrl": undefined,
  "canModerateCurrentCommunity": undefined,
  "communities": Array [],
  "currentCommunity": undefined,
  "currentCommunityId": undefined,
  "currentNetworkId": undefined,
  "currentUser": undefined,
  "name": "you",
  "networks": Array [
    Object {
      "communities": Array [],
      "id": "all-communities",
      "name": "All Communities",
    },
  ],
}
`;

exports[` 2`] = `
Object {
  "logout": [Function],
  "selectCommunity": [Function],
  "selectNetwork": [Function],
}
`;

exports[`mergeProps matches the last snapshot and bound functions work as expected 1`] = `
Object {
  "canModerateCurrentCommunity": false,
  "currentUser": Object {
    "id": "anyid",
  },
  "goToCommunity": [Function],
  "goToCommunitySettings": false,
  "goToCreateCommunityName": [Function],
  "goToMyProfile": [Function],
  "goToNetwork": [Function],
  "name": "Roy Rogers",
  "navigation": Object {
    "navigate": [Function],
  },
  "selectCommunity": [Function],
  "selectNetwork": [Function],
  "showSettings": [Function],
}
`;

exports[`mergeProps matches the last snapshot and bound functions work as expected 2`] = `
Object {
  "canModerateCurrentCommunity": true,
  "currentUser": Object {
    "id": "anyid",
  },
  "goToCommunity": [Function],
  "goToCommunitySettings": [Function],
  "goToCreateCommunityName": [Function],
  "goToMyProfile": [Function],
  "goToNetwork": [Function],
  "name": "Roy Rogers",
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "selectCommunity": [MockFunction],
  "selectNetwork": [MockFunction],
  "showSettings": [Function],
}
`;

exports[`partitionCommunities separates independent communities from networked communities 1`] = `
Object {
  "communities": Array [
    Object {
      "id": "2",
      "name": "two",
      "network": undefined,
      "newPostCount": undefined,
    },
    Object {
      "id": "5",
      "name": "five",
      "network": undefined,
      "newPostCount": undefined,
    },
  ],
  "networks": Array [
    Object {
      "communities": Array [],
      "id": "all-communities",
      "name": "All Communities",
    },
    Object {
      "communities": Array [
        Object {
          "id": "1",
          "name": "one",
          "network": Object {
            "communities": undefined,
            "id": "1",
            "name": "networkOne",
          },
          "newPostCount": undefined,
        },
        Object {
          "id": "4",
          "name": "four",
          "network": Object {
            "communities": undefined,
            "id": "1",
            "name": "networkOne",
          },
          "newPostCount": undefined,
        },
      ],
      "id": "1",
      "name": "networkOne",
      "nonMemberCommunities": undefined,
    },
    Object {
      "communities": Array [
        Object {
          "id": "3",
          "name": "three",
          "network": Object {
            "communities": undefined,
            "id": "2",
            "name": "networkTwo",
          },
          "newPostCount": undefined,
        },
      ],
      "id": "2",
      "name": "networkTwo",
      "nonMemberCommunities": undefined,
    },
  ],
}
`;
